46
================

02/07/22 Use utf-8 when writing transaction logs
02/07/22 Set base tag for online forms so that they can be proxied #1147
01/07/22 Do not show the report toolbar for the html_report service call
01/07/22 Prevent hidden pickuplocation on new animal choosing an inactive item
28/06/22 Copy pickupaddress column when cloning an animal
28/06/22 Allow S3 credentials/endpoint to be set as sitedefs #1146
28/06/22 Hide intake time as well as date for non-shelter animals
27/06/22 If size is removed, always send M to PetFinder
24/06/22 Read through disk cache for thumbnail images to avoid reliance on CDN
22/06/22 Highlight bad email addresses in dialog, stop using global error #1138
22/06/22 Refactoring old stuff out of html.py #1145
22/06/22 Refactoring report criteria for consistency #1145
22/06/22 (sm.com) make sure account alias is set correctly when sending email
21/06/22 basic check-a-chip integration for the UK and US #1144
21/06/22 Refactor/split common out into html/validate/microchip js #1144
20/06/22 Annual figures section for non-shelter microchips implanted #1140
20/06/22 Re-implement mobile report criteria in new UI #1096
20/06/22 Fix error that can cause bad data to prevent the calendar loading
17/06/22 Prevent auto disabling of RescueGroups publisher due to transient 530
11/06/22 Stop edits to investigation records removing the person
10/06/22 Expired online forms are saved in the deletion log now
09/06/22 Fix images in PDFs: iif was causing both expressions to be evaluated
08/06/22 Revert validation fix, roles still need to be visible for super users
06/06/22 Allow font size to be chosen when printing mailing labels
05/06/22 Record the user-agent with online form submissions
02/06/22 Fix insurance not hiding from movements correctly when set to remove
02/06/22 Allow media to be moved to other animal/person records #822
01/06/22 Handle thumbnails for youtube.com/shorts URL format
01/06/22 Limit microchip fields to 15 chars